[project]
name = "woohee-hf-loader"
version = "2.2.4"
description = "Load models directly from Hugging Face Hub in ComfyUI - supports UNET, CLIP, VAE, upscalers, GGUF models and more"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "woohee5511", email = "woohee5511@gmail.com" }
]
keywords = ["comfyui", "huggingface", "upscale", "upscaler", "image-upscaling", "gguf", "quantized-models", "unet", "clip", "vae", "qwen"]
dependencies = [
    "huggingface-hub>=0.20.0",
    "torch>=1.11.0"
]

[tool.comfy]
PublisherId = "woohee5511"
DisplayName = "Woohee HF Loader"
Icon = ""

[project.urls]
Repository = "https://github.com/hw5511/woohee_hf_loader"
